# wolf-sheep-grass

./: AUTHORS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  wolves-sheep-grass.py
doc/source/: conf.py  index.rst
wolf_sheep_grass/: __init__.py
